fix: 그동안 프로젝트 설정은 Java 11이지만 컴파일시 17을 사용하여 16 이후 도입된 메서드를 사용했던 부분 수정
Stream.collect(Collectors.toList()): Java 8 이후
Stream.collect(Collectors.toUnmodifiableList()): Java 10 이후
Stream.toList(): Java 16 이후